test/Fail/TickConstants.err
TickConstants.agda:13.10-25: error: [ReferencesFutureVariables]
The lock variable x can not appear simultaneously in the "later"
term foo (c x) and in the lock term c x.
when checking that the expression foo (c x) (c x) has type Set
